// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCategories with a list of categories, with a selection snapshots 1`] = `
<header>
  Store Cupboard
  <a
    className="item"
    href="#"
    key="1"
    onClick={[Function]}
  >
    title 1
  </a>
  <a
    className="item active"
    href="#"
    key="2"
    onClick={[Function]}
  >
    title 2
  </a>
  <a
    className="item"
    href="#"
    key="3"
    onClick={[Function]}
  >
    title 3
  </a>
  <a
    className="item"
    href="#"
    key="4"
    onClick={[Function]}
  >
    title 4
  </a>
</header>
`;

exports[`ProductCategories with a list of categories, without selection snapshots 1`] = `
<header>
  Store Cupboard
  <a
    className="item"
    href="#"
    key="1"
    onClick={[Function]}
  >
    title 1
  </a>
  <a
    className="item"
    href="#"
    key="2"
    onClick={[Function]}
  >
    title 2
  </a>
  <a
    className="item"
    href="#"
    key="3"
    onClick={[Function]}
  >
    title 3
  </a>
  <a
    className="item"
    href="#"
    key="4"
    onClick={[Function]}
  >
    title 4
  </a>
</header>
`;
